# u701

./: .clang-format  .dockerignore  .env  .espup.sh  .gitignore  .gitiignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.broken  Dockerfile.broken2  Dockerfile.old  Justfile  Makefile  README.md  build.rs  defconfig  docker-compose.yml  keyboard.cpp  keyboard.h  ota.cpp  ota.h  partitions.csv  platformio.ci.ini  platformio.ini  print.h  rust-toolchain.ci.toml  rust-toolchain.toml  rustfmt.toml  sdkconfig  sdkconfig.debug  sdkconfig.defaults  sdkconfig.defaults.debug  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.release  sdkconfig.esp32  sdkconfig.latest  (+11 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml  docker.yml  pio.yml  rust.yml  verify.yml
.trunk/: trunk.yaml
docker/: 99-esp32.rules  dev.sh  setup-enhanced.sh  test-env.sh
include/: AdvertisedDeviceCallbacks.h  AdvertisedDeviceCallbacks.hh  ClientCallback.h  ClientCallbacks.h  ClientCallbacks.hh  ffi.h  ffi.hh  settings.h  shared.h  utility.h  utility.hh
machine/: Cargo.toml
machine/.cargo/: config.toml
machine/src/: constants.rs  lib.rs
src/: AdvertisedDeviceCallbacks.cpp  ClientCallback.cpp  ClientCallback.h  ClientCallbacks.cpp  OneButtonWrapper.cpp  OneButtonWrapper.h  ScanCallback.cpp  ScanCallback.h  constants.rs  debug.cpp  debug.h  event.rs  ffi.cpp  ffi.h  ffi.rs  impls.rs  keyboard.cpp  keyboard.h  keyboard.rs  keyboard_ffi.cpp  keyboard_ffi.h  lib.rs  main.cpp  main.rs  main4.cpp  nice_to_have.c  ota.cpp  ota.h  print.h  rust_interface.h  settings.h  shared.cpp  shared.h  state.cpp  state.h  states.rs  types.rs  utility.cpp  utility.h  utility.tpp  (+1 more)
src/models/: push_state.rs
tests/: tests.rs
tools/: connect_build_wifi.py  git-ai-all  monitor.sh  platform.upload.py  platform.wifi.py  platformio.cargo.py  restore_home_wifi.py  restore_wifi.py
