[workspace]
members = ["machine"]

[package]
authors = ["Linus Oleander <linus@oleander.io>"]
version = "0.1.0"
edition = "2021"
name = "u701"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"
name = "u701"

[dependencies]
lazy_static = { version = "1.4.0", default-features = false }
env_logger = { version = "0.10.1", default-features = false }
anyhow = { version = "1.0.79", default-features = false }
log = { version = "0.4.20", default-features = false }
machine = { path = "machine" }

[profile.release]
opt-level = "s"
lto = false

[profile.release.package."*"]
opt-level = "s"

[profile.dev]
opt-level = "z"
debug = true
