[package]
name = "machine"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "machine"
path = "src/lib.rs"
# crate-type = ["staticlib"]

[dependencies.lazy_static]
features = ["spin_no_std"]
default-features = false
version = "1.4.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[profile.dev]
debug = true
opt-level = "z"
